--- a/server/ecommerce/package.json
+++ b/server/ecommerce/package.json
@@ -24,6 +24,12 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.19",
+    "mysql": "^2.18.1",
+    "open": "^8.2.1",
+    "openurl": "^1.1.1",
+    "url": "^0.11.0",
+    "bcrypt": "^5.0.1",
+    "instamojo-nodejs": "0.0.5",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "nodemailer": "^4.7.0",
